# internal/models/drink_log.go
@@ -6,14 +6,15 @@ import (
 )
 
 type DrinkLog struct {
-	ID        int       `json:"id"`
-	UserID    int       `json:"user_id"`
-	LoggedAt  time.Time `json:"logged_at"`
-	Name      string    `json:"name"`
-	Type      string    `json:"type"`
-	ABV       float64   `json:"abv"`
-	SizeValue int       `json:"size_value"`
-	SizeUnit  string    `json:"size_unit"`
+	ID        int        `json:"id"`
+	UserID    int        `json:"user_id"`
+	LoggedAt  time.Time  `json:"logged_at"`
+	Name      string     `json:"name"`
+	Type      string     `json:"type"`
+	ABV       float64    `json:"abv"`
+	SizeValue int        `json:"size_value"`
+	SizeUnit  string     `json:"size_unit"`
+	UpdatedAt *time.Time `json:"updated_at"`
 }
 
 func (d *DrinkLog) GetVolumeInMl() float64 {
